--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <section class="home">
+
+    </section>
+    <section class="play-ground">
+
+    </section>
+    <section class="score">
+        
+    </section>
 </body>
 </html>
